[package]
name = "extracto_program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "extracto_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.27.0", features = ["init-if-needed"]}
clockwork-sdk = "2.0.18"
gpl-session = { version = "1.0.0", features = ["no-entrypoint"] }
solana-program = "=1.14.17"
